--- a/example.config.json
+++ b/example.config.json
@@ -10,6 +10,7 @@
 		{
 			"accessory": "SonoffBasicESPEasy",
 			"name": "Living Room Switch",
+			"type": "Outlet",
 			"ip": "192.168.1.205"
 		}
 	]
